fix: Disable hover color on dark mode toggle focus

--- a/assets/sass/navigation.scss
+++ b/assets/sass/navigation.scss
@@ -253,8 +253,7 @@ body:has(.o-header__nav--open) {
   color: var(--color-body);
   transition: color 0.3s ease;
 
-  &:hover,
-  &:focus {
+  &:hover {
     color: var(--link-hovered);
   }
 }
